[gd_scene load_steps=4 format=3 uid="uid://dxstma4qbnui4"]

[ext_resource type="Texture2D" uid="uid://d2yemup5o5pct" path="res://Assets/Visuals/Tom.png" id="1_eeul8"]
[ext_resource type="Script" path="res://Scenes/Tom.gd" id="2_nyn8s"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sk0rn"]
radius = 5.06472
height = 17.6471

[node name="Tom" type="Sprite2D"]
show_behind_parent = true
texture_filter = 1
position = Vector2(118, 6)
scale = Vector2(1.777, 1.7)
texture = ExtResource("1_eeul8")
script = ExtResource("2_nyn8s")

[node name="TurnDectector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TurnDectector"]
shape = SubResource("CapsuleShape2D_sk0rn")

[node name="ThrowTimer" type="Timer" parent="."]

[node name="SpeedUpTimer" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[node name="ThrowSpeedTimer" type="Timer" parent="."]
wait_time = 20.0
autostart = true

[connection signal="area_entered" from="TurnDectector" to="." method="_on_turn_dectector_area_entered"]
[connection signal="timeout" from="ThrowTimer" to="." method="_on_throw_timer_timeout"]
[connection signal="timeout" from="SpeedUpTimer" to="." method="_on_speed_up_timer_timeout"]
[connection signal="timeout" from="ThrowSpeedTimer" to="." method="_on_throw_speed_timer_timeout"]
